dev/test_programs/INVALID/group1/exp6.go
package main
func f (a int, b int){
	return a;
}
func main(){
	var x int;
	var y int;
	f(x y)
}
